# funhou-hook

./: AGENTS.md  LICENSE  README.md  documentation.md  hook.py  pyproject.toml
.github/workflows/: test.yaml
config/: .env.example  funhou.toml
docs/: ai-agent-funhou-system.md  design.md  dev-harness-todo.md  logging.md  output-formatter.md  summary-engine.md
docs/debug/: claude-code-hooks-notes.md
docs/features/: approval-state-reliability.md  cleanup-checklist-draft.md  codex-support.md
docs/work/: current-issue.md  phase2-slack-plan.md  phase2-slack-regression-test.md  tichet2.5-currentlogs.md  ticket-2.5.md
src/funhou_hook/: __init__.py  __main__.py  classifier.py  config.py  dispatcher.py  formatter.py  hook.py  logging.py  messages.py  slack_formatter.py  slack_sender.py
tests/: test_config.py  test_dispatcher.py  test_hook_dispatch_integration.py  test_hook_notifications.py  test_hook_runtime_logging.py  test_logging.py  test_messages.py  test_phase2_slack_integration.py  test_slack_formatter.py  test_slack_sender.py
