[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "funhou-hook"
version = "0.1.0"
description = "Hooks and core message types for an AI agent funhou reporting system."
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = { file = "LICENSE" }
authors = [
  { name = "funhou-hook contributors" },
]
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.11.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/funhou_hook"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
